
Version 1.6.0 [WIP]
-------------------------------------------------------------------------

FEATURES
* Fully punycode encoding and decoding support, thanks to Drew Schmidt.

Version 1.5.2
-------------------------------------------------------------------------

BUGS
* Custom suffix lists were not working properly.
Version 1.5.1
-------------------------------------------------------------------------

BUGS
* Fixed a bug in which punycode TLDs were excluded from TLD extraction (thanks to
  Alex Pinto for pointing that out) #51
* param_get now returns NAs for missing values, rather than empty strings (thanks to Josh Izzard for the report) #49
* suffix_extract now no longer goofs if the domain+suffix combo overlaps with a valid suffix (thanks to Maryam Khezrzadeh and Alex Pinto) #50

DEVELOPMENT
* Removed the non-portable -g compiler flag in response to CRAN feedback.

Version 1.5.0
-------------------------------------------------------------------------
FEATURES

* Using tries as a data structure (see https://github.com/Ironholds/triebeard), we've increased the speed of suffix_extract() (instead of taking twenty seconds to process a million domains, it now takes..one.)
* A dataset of top-level domains (TLDs) is now available as data(tld_dataset)
* suffix_refresh() has been reinstated, and can be used with suffix_extract() to ensure suffix
extraction is done with the most up-to-date dataset version possible.
* tld_extract() and tld_refresh() mirrors the functionality of suffix_extract() and suffix_refresh()
BUG FIXES
* host_extract() lets you get the host (the lowest-level subdomain, or the domain itself if no subdomain
is present) from the `domain` fragment of a parsed URL.
* Code from Jay Jacobs has allowed us to include a best-guess at the org name in the suffix dataset.
* url_parameters is now deprecated, and has been marked as such.

DEVELOPMENT
* The instantiation and processing of suffix and TLD datasets on load marginally increases