@@ -4,6 +4,7 @@ Version 1.6.0 [WIP]
 
 FEATURES
 * Fully punycode encoding and decoding support, thanks to Drew Schmidt.
+* param_get, param_set and param_remove are all fully capable of handling NA values.
 
 Version 1.5.2
 -------------------------------------------------------------------------
